syntax = "proto3";

package testing.basicpaginated;

option php_namespace = "Testing\\BasicPaginated";

import "google/api/client.proto";

service BasicPaginated {
  option (google.api.default_host) = "paginated.example.com";
  option (google.api.oauth_scopes) = "scope1,scope2";

  rpc MethodPaginated(Request) returns(Response);
}

message Request {
  int32 page_size = 1;
  string page_token = 2;
}

message Response {
  repeated string results = 1;
  string next_page_token = 2;
}
